@@ -1,5 +1,9 @@
 # Setup ROOT and gcc
-source /cvmfs/atlas.cern.ch/repo/ATLASLocalRootBase/user/atlasLocalSetup.sh
+# added back by Michele
+export ATLAS_LOCAL_ROOT_BASE=/cvmfs/atlas.cern.ch/repo/ATLASLocalRootBase
+source ${ATLAS_LOCAL_ROOT_BASE}/user/atlasLocalSetup.sh --quiet
+# removed
+# source /cvmfs/atlas.cern.ch/repo/ATLASLocalRootBase/user/atlasLocalSetup.sh
 localSetupROOT 6.04.14-x86_64-slc6-gcc49-opt --quiet
 
 if [ "${ROOTSYS}" == "" ]; then
